--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 </div>
 
 <div id="ui">
-    <div>Score: <span id="score">0</span></div>
-    <div style="opacity: 0.6">Best: <span id="best">0</span></div>
+    <div>Счет: <span id="score">0</span></div>
+    <div style="opacity: 0.6">Рекорд: <span id="best">0</span></div>
 </div>
 
 <div id="game-container">
