--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </div>
 
 <div id="ui">
-    <div>Счет: <span id="score">0</span></div>
+    <div>Белок: <span id="score">0</span></div>
     <div style="opacity: 0.6">Рекорд: <span id="best">0</span></div>
 </div>
 
